--- a/thi/register.html
+++ b/thi/register.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,52 +8,51 @@
     <link href="CSS/Account.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
-        </div>
-    </header>
-
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <main>
-        <section id="register" class="auth-section">
-            <div class="auth-container">
-                <h2>Đăng Ký</h2>
-                <form action="register.html" method="POST">
-                    <label for="username">Tên Đăng Nhập:</label>
-                    <input type="text" id="username" name="username" required>
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="password">Mật Khẩu:</label>
-                    <input type="password" id="password" name="password" required>
-
-                    <button type="submit" class="btn">Đăng Ký</button>
-                </form>
-                <p>Đã có tài khoản? <a href="Login.html">Đăng nhập</a></p>
+    <div class="wrapper">
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
             </div>
-        </section>
-    </main>
-    <footer>
-        <div class="container">
-            <p>Phạm Mạnh Tuấn KHMT K9</p>
-            <p>Phạm Kim Thành KHMT K9</p>
+        </header>
+
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </footer>
+        <main>
+            <section id="register" class="auth-section">
+                <div class="auth-container">
+                    <h2>Đăng Ký</h2>
+                    <form action="register.html" method="POST">
+                        <label for="username">Tên Đăng Nhập:</label>
+                        <input type="text" id="username" name="username" required>
+
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+
+                        <label for="password">Mật Khẩu:</label>
+                        <input type="password" id="password" name="password" required>
+
+                        <button type="submit" class="btn">Đăng Ký</button>
+                    </form>
+                    <p>Đã có tài khoản? <a href="Login.html">Đăng nhập</a></p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
+        </div>
 </body>
 </html>
