--- a/thi/sanpham12.html
+++ b/thi/sanpham12.html
@@ -1,9 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sữa rửa mặt Reihaku Hatomugi</title>
+    <link rel="stylesheet" href="CSS/Styles.css">
     <link href="CSS/Shop.css" rel="stylesheet" />
     <link href="CSS/Infor.css" rel="stylesheet" />
 </head>
@@ -45,12 +46,8 @@
             </a>
         </div>
     </div>
-
     <footer>
-        <div class="container">
-            <p>Phạm Mạnh Tuấn KHMT K9</p>
-            <p>Phạm Kim Thành KHMT K9</p>
-        </div>
+        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
     </footer>
 </body>
 </html>
