--- a/thi/sanpham13.html
+++ b/thi/sanpham13.html
@@ -9,6 +9,7 @@
     <link href="CSS/Infor.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="wrapper">
     <header>
         <div class="containe">
             <nav>
@@ -52,5 +53,6 @@
     <footer>
         <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
     </footer>
+        </div>
 </body>
 </html>
