--- a/thi/index.html
+++ b/thi/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nhà thuốc Long Châu</title>
+    <link rel="icon" href="IMG/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS\Styles.css">
 </head>
 <body>
