--- a/thi/products.html
+++ b/thi/products.html
@@ -61,7 +61,7 @@
             <div class="products-section">
                 <div class="product-list">
                     <div class="product-item">
-                        <a href="sanpham1.html"> <img src="IMG/sanpham1.png" alt="Nồi chiên không dầu" /></a>
+                        <a href="sanpham1.html"> <img src="IMG/sanpham1.png"></a>
                         <h3>Men vi sinh Enterogermina Gut Defense Sanofi</h3>
                         <div class="product-price">
                             <span class="current-price">157.000 ₫</span>
@@ -70,7 +70,7 @@
                         <div class="product-promo">Giảm giá 14.67%, đã giảm 27.000 ₫</div>
                     </div>
                     <div class="product-item">
-                        <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Quạt điều hoà"></a>
+                        <a href="sanpham2.html"><img src="IMG/sanpham2.png"></a>
                         <h3>Nước súc miệng Pearlie White Fluorinze</h3>
                         <div class="product-price">
                             <span class="current-price">132.000 ₫</span>
@@ -79,7 +79,7 @@
                         <div class="product-promo">Giảm giá 20%, đã giảm 33.000 ₫</div>
                     </div>
                     <div class="product-item">
-                        <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Nồi cơm điện"></a>
+                        <a href="sanpham3.html"><img src="IMG/sanpham3.png" ></a>
                         <h3>Siro Bổ Phế Lábebé</h3>
                         <div class="product-price">
                             <span class="current-price">60.000 ₫</span>
@@ -88,7 +88,7 @@
                         <div class="product-promo">Giảm giá 20%, đã giảm 15.000 ₫</div>
                     </div>
                     <div class="product-item">
-                        <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Lò vi sóng"></a>
+                        <a href="sanpham4.html"><img src="IMG/sanpham4.png" ></a>
                         <h3>Nhiệt kế hồng ngoại Yuwell YT-1C</h3>
                         <div class="product-price">
                             <span class="current-price">472.000 ₫</span>
@@ -97,7 +97,7 @@
                         <div class="product-promo">Giảm giá 20%, đã giảm 118.000 ₫</div>
                     </div>
                     <div class="product-item">
-                        <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Máy lọc nước"></a>
+                        <a href="sanpham5.html"><img src="IMG/sanpham5.png" ></a>
                         <h3>Thuốc Telfor 60 DHG</h3>
                         <div class="product-price">
                             <span class="current-price">1.300 ₫</span>
@@ -106,7 +106,7 @@
                         <div class="product-promo">Giảm giá 35%, đã giảm 700 ₫</div>
                     </div>
                     <div class="product-item">
-                        <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Quạt điều hoà"></a>
+                        <a href="sanpham6.html"><img src="IMG/sanpham6.png" ></a>
                         <h3>QBột Hapacol 150 DHG</h3>
                         <div class="product-price">
                             <span class="current-price">34.800₫</span>
