--- a/thi/pay.html
+++ b/thi/pay.html
@@ -64,26 +64,22 @@
             <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
         </footer>
         <script>
-            let timeLeft = 15 * 60; // 15 phút tính bằng giây
-            const timerElement = document.getElementById("timer");
+            var time = 15 * 60; 
+            var el = document.getElementById("timer");
 
-            const countdown = setInterval(() => {
-                const minutes = Math.floor(timeLeft / 60);
-            const seconds = timeLeft % 60;
-
-            // Cập nhật hiển thị thời gian
-            timerElement.textContent = `${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
-
-            // Giảm thời gian còn lại
-            timeLeft--;
-
-            // Dừng đếm ngược khi hết thời gian
-            if (timeLeft < 0) {
-                clearInterval(countdown);
-                timerElement.textContent = "Hết thời gian!";
-            }
-            }, 1000); // Cập nhật mỗi giây
+            var countdown = setInterval(function () {
+                var m = Math.floor(time / 60);
+                var s = time % 60;
+                el.textContent = m + ":" + (s < 10 ? "0" + s : s);
+                time--;
+                if (time < 0) {
+                    clearInterval(countdown);
+                    el.textContent = "Hết thời gian!";
+                }
+            }, 1000); //1000 mili giây = 1 giây (chạy lại hàm bên trong mỗi giây)
         </script>
+
+
         </div>
 </body>
 </html>
