--- a/thi/index.html
+++ b/thi/index.html
@@ -35,7 +35,7 @@
             <div class="product-block">
                 <h2 class="section-title">
                     <img src="IMG/hot1.png" class="title-icon">Top bán chạy</h2>
-                <div class="product-list">
+                <div class="product-listi">
                     <div class="product-item">
                         <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
                         <p class="product-name">Men vi sinh Enterogermina Gut Defense Sanofi</p>
@@ -71,7 +71,7 @@
                 <div class="product-block">
                     <h2 class="section-title">
                         <img src="IMG/hit1.png" alt="Icon" class="title-icon">Thực phẩm chức năng</h2>
-                    <div class="product-list">
+                    <div class="product-listi">
                         <div class="product-item">
                             <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
                             <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
@@ -107,7 +107,7 @@
                 <div class="product-block">
                     <h2 class="section-title">
                         <img src="IMG/hit2.png" class="title-icon">Sản phẩm không kê đơn</h2>
-                    <div class="product-list">
+                    <div class="product-listi">
                         <div class="product-item">
                             <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
                             <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
