--- a/thi/sanpham1.html
+++ b/thi/sanpham1.html
@@ -10,50 +10,80 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham1.png" alt="Men vi sinh">
-        <div class="product-info">
-            <h2>Hỗn dịch uống men vi sinh Enterogermina Gut Defense Sanofi tăng cường tiêu hóa, hỗ trợ bảo vệ đường ruột</h2>
-            <p>Giá: <span class="product-price">157.000đ / Hộp</span></p>
-            <p>Danh mục:    Dạ dày, tá tràng</p>
-            <p>Dạng bào chế: Hỗn dịch uống</p>
-            <p>Quy cách: Hộp 2 Vỉ x 10 Ống</p>
-            <p>Xuất xứ thương hiệu: Pháp</p>
-            <p>Nhà sản xuất: Opella Healthcare Italy S.R.L.</p>
-            <p>Nước sản xuất: Ý</p>
-            <p>Thành phần: Bacillus clausii</p>
-            <p>Mô tả ngắn: Enterogermina Gut Defense giúp tăng cường tiêu hóa, hỗ trợ bảo vệ đường ruột trước hại khuẩn.</p>
-            <p>Số đăng ký: 2085/2024/ĐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham1.png" alt="Men vi sinh">
+            <div class="product-info">
+                <h2>Hỗn dịch uống men vi sinh Enterogermina Gut Defense Sanofi tăng cường tiêu hóa, hỗ trợ bảo vệ đường ruột</h2>
+                <p>Giá: <span class="product-price">157.000đ / Hộp</span></p>
+                <p>Danh mục:    Dạ dày, tá tràng</p>
+                <p>Dạng bào chế: Hỗn dịch uống</p>
+                <p>Quy cách: Hộp 2 Vỉ x 10 Ống</p>
+                <p>Xuất xứ thương hiệu: Pháp</p>
+                <p>Nhà sản xuất: Opella Healthcare Italy S.R.L.</p>
+                <p>Nước sản xuất: Ý</p>
+                <p>Thành phần: Bacillus clausii</p>
+                <p>Mô tả ngắn: Enterogermina Gut Defense giúp tăng cường tiêu hóa, hỗ trợ bảo vệ đường ruột trước hại khuẩn.</p>
+                <p>Số đăng ký: 2085/2024/ĐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Product 2"></a>
+                    <p class="product-name">Nước súc miệng Pearlie White Fluorinze</p>
+                    <p class="product-price">132.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Product 3"></a>
+                    <p class="product-name">Siro Bổ Phế Lábebé</p>
+                    <p class="product-price">60.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham18.html"><img src="IMG/sanpham18.png" alt="Product 14"></a>
+                    <p class="product-name">Thuốc Crestor</p>
+                    <p class="product-price">160.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
+                    <p class="product-name">Thuốc Telfor 60 DHG</p>
+                    <p class="product-price">1.300đ / Viên</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
+                    <p class="product-name">Bột Hapacol 150 DHG</p>
+                    <p class="product-price">34.800đ / Hộp</p>
+                </div>
+            </div>
+        </div>
 
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
