--- a/thi/sanpham10.html
+++ b/thi/sanpham10.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thực phẩm BV sức khỏe NMN PQQ</title>
+    <title>Máy xông khí Yuwell 403M </title>
     <link rel="stylesheet" href="CSS/Styles.css">
     <link href="CSS/Shop.css" rel="stylesheet" />
     <link href="CSS/Infor.css" rel="stylesheet" />
@@ -31,19 +31,18 @@
             <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
         <div class="product-detail">
-            <img src="IMG/sanpham10.png" alt="TPCN">
+            <img src="IMG/sanpham11.png" alt="Men vi sinh">
             <div class="product-info">
-                <h2>Thực phẩm bảo vệ sức khỏe NMN PQQ</h2>
-                <p>Giá: <span class="product-price">6.675.000đ / Hộp</span></p>
-                <p>Danh mục: Vitamin tổng hợp</p>
-                <p>Dạng bào chế: Viên nang cứng</p>
-                <p>Quy cách: Hộp 60 Viên</p>
-                <p>Xuất xứ thương hiệu: Nhật Bản</p>
-                <p>Nhà sản xuất: GENSEI CO.,LTD</p>
-                <p>Nước sản xuất: Nhật Bản</p>
-                <p>Thành phần: NMN (Nicotinamide Mononucleotide), Vitamin C, Vitamin B3, PQQ, Collagen peptide, chiết xuất thực vật lên men, L-Tryptophan, Coenzym Q10, chiết xuất nhau thai heo, Fucoidan, bột chiết xuất Nấm Agaricus, nhân sâm Hàn Quốc, Đông trùng hạ thảo, bột chiết xuất nấm men chứa cysteine peptide, chiết xuất tổ yến, Ngọc trai, Chiết xuất vỏ cây thông, Vitamin B1, Vitamin B2, Vitamin B6, Vitamin B12</p>
-                <p>Mô tả ngắn: Thực phẩm bảo vệ sức khỏe NMN, PQQ giúp bổ sung NMN, PQQ và một số vitamin giúp chống oxy hóa; hỗ trợ chống lão hóa; giúp cải thiện làn da; giúp nâng cao sức khỏe và tăng cường sức đề kháng.</p>
-                <p>Số đăng ký: 5483/2024/ĐKSP</p>
+                <h2>Máy xông khí dung nén khí Yuwell 403M chuyển thuốc dạng dung dịch thành sương mù cho niêm mạc hô hấp</h2>
+                <p>Giá: <span class="product-price">1.210.000đ / Hộp</span></p>
+                <p>Danh mục: Máy xông khí dung</p>
+                <p>Thời hạn bảo hành: 2 năm</p>
+                <p>Quy cách: Hộp</p>
+                <p>Xuất xứ thương hiệu: Trung Quốc</p>
+                <p>Nhà sản xuất: YUWELL</p>
+                <p>Nước sản xuất: Trung Quốc</p>
+                <p>Mô tả ngắn: Máy xông khí dung nén khí Yuwell 403M là thiết bị dùng để chuyển thuốc từ dạng dung dịch thành dạng sương mù, giúp thuốc đọng lại trên niêm mạc đường hô hấp, thấm sâu vào phế quản cho hiệu quả nhanh và giảm tối đa phản ứng phụ do thuốc uống gây nên.</p>
+                <p>Số đăng ký: 240001288/PCBB-HCM</p>
                 <button>Thêm vào giỏ hàng</button>
                 <a href="pay.html">
                     <button>Mua ngay</button>
@@ -54,29 +53,29 @@
             <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
             <div class="product-listp">
                 <div class="product-itemp">
-                    <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
-                    <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
-                    <p class="product-price">295.000đ / Hộp</p>
+                    <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
+                    <p class="product-name">Chai xịt Zuchi Family</p>
+                    <p class="product-price">29.000đ / Chai</p>
                 </div>
                 <div class="product-itemp">
-                    <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
-                    <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
-                    <p class="product-price">1.200.000đ / Hộp</p>
+                    <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
+                    <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
+                    <p class="product-price">90.000đ / Tuýp</p>
                 </div>
                 <div class="product-itemp">
-                    <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
-                    <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
-                    <p class="product-price">575.000đ / Hộp</p>
+                    <a href="sanpham16.html"><img src="IMG/sanpham16.png" alt="Product 14"></a>
+                    <p class="product-name">Sữa bột CaloSure gold Vitadairy</p>
+                    <p class="product-price">408.000đ / Chai</p>
                 </div>
                 <div class="product-itemp">
-                    <a href="sanpham15.html"><img src="IMG/sanpham15.png" alt="Product 14"></a>
-                    <p class="product-name">Viên uống LéAna Ocavill</p>
-                    <p class="product-price">540.000đ / Hộp</p>
+                    <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
+                    <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
+                    <p class="product-price">87.200đ / Tuýp</p>
                 </div>
                 <div class="product-itemp">
-                    <a href="sanpham17.html"><img src="IMG/sanpham17.png" alt="Product 14"></a>
-                    <p class="product-name">Cốm Lacto Biomin Gold</p>
-                    <p class="product-price">108.000đ / Hộp</p>
+                    <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
+                    <p class="product-name">Nhiệt kế hồng ngoại Yuwell YT-1C</p>
+                    <p class="product-price">472.000đ / Hộp</p>
                 </div>
             </div>
         </div>
