--- a/thi/sanpham12.html
+++ b/thi/sanpham12.html
@@ -10,46 +10,76 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham12.png" alt="Sửa rửa mặt">
-        <div class="product-info">
-            <h2>Sữa rửa mặt Reihaku Hatomugi Acne Care and Facial Washing ngừa mụn, dưỡng ẩm và làm sáng da (130g)</h2>
-            <p>Giá: <span class="product-price">87.200đ / Tuýp</span></p>
-            <p>Danh mục:    Sữa rửa mặt (Kem, gel, sữa)</p>
-            <p>Quy cách: Tuýp x 130g</p>
-            <p>Xuất xứ thương hiệu: Nhật Bản</p>
-            <p>Nước sản xuất: Nhật Bản</p>
-            <p>Thành phần: dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo</p>
-            <p>Mô tả ngắn: Sữa rửa mặt Hatomugi ngừa mụn, dưỡng ẩm và làm sáng da Reihaku Hatomugi Acne Care & Facial Washing 130g chứa các thành phần dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo giúp loại bỏ bụi bẩn, dầu thừa ẩn sâu trong lỗ chân lông, hỗ trợ ngăn ngừa và làm giảm mụn trứng cá, đồng thời bổ sung độ ẩm, cải thiện tình trạng da khô thô ráp. </p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham12.png" alt="Sửa rửa mặt">
+            <div class="product-info">
+                <h2>Sữa rửa mặt Reihaku Hatomugi Acne Care and Facial Washing ngừa mụn, dưỡng ẩm và làm sáng da (130g)</h2>
+                <p>Giá: <span class="product-price">87.200đ / Tuýp</span></p>
+                <p>Danh mục:    Sữa rửa mặt (Kem, gel, sữa)</p>
+                <p>Quy cách: Tuýp x 130g</p>
+                <p>Xuất xứ thương hiệu: Nhật Bản</p>
+                <p>Nước sản xuất: Nhật Bản</p>
+                <p>Thành phần: dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo</p>
+                <p>Mô tả ngắn: Sữa rửa mặt Hatomugi ngừa mụn, dưỡng ẩm và làm sáng da Reihaku Hatomugi Acne Care & Facial Washing 130g chứa các thành phần dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo giúp loại bỏ bụi bẩn, dầu thừa ẩn sâu trong lỗ chân lông, hỗ trợ ngăn ngừa và làm giảm mụn trứng cá, đồng thời bổ sung độ ẩm, cải thiện tình trạng da khô thô ráp. </p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
+                    <p class="product-name">Chai xịt Zuchi Family</p>
+                    <p class="product-price">29.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
+                    <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
+                    <p class="product-price">1.210.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham16.html"><img src="IMG/sanpham16.png" alt="Product 14"></a>
+                    <p class="product-name">Sữa bột CaloSure gold Vitadairy</p>
+                    <p class="product-price">408.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
+                    <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
+                    <p class="product-price">90.000đ / Tuýp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
+                    <p class="product-name">Nhiệt kế hồng ngoại Yuwell YT-1C</p>
+                    <p class="product-price">472.000đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
