--- a/thi/sanpham12.html
+++ b/thi/sanpham12.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sữa rửa mặt Reihaku Hatomugi</title>
+    <title>Kem đánh răng Sensodyne</title>
     <link rel="stylesheet" href="CSS/Styles.css">
     <link href="CSS/Shop.css" rel="stylesheet" />
     <link href="CSS/Infor.css" rel="stylesheet" />
@@ -31,16 +31,18 @@
             <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
         <div class="product-detail">
-            <img src="IMG/sanpham12.png" alt="Sửa rửa mặt">
+            <img src="IMG/sanpham13.png" alt="Kem đánh răng">
             <div class="product-info">
-                <h2>Sữa rửa mặt Reihaku Hatomugi Acne Care and Facial Washing ngừa mụn, dưỡng ẩm và làm sáng da (130g)</h2>
-                <p>Giá: <span class="product-price">87.200đ / Tuýp</span></p>
-                <p>Danh mục:    Sữa rửa mặt (Kem, gel, sữa)</p>
-                <p>Quy cách: Tuýp x 130g</p>
-                <p>Xuất xứ thương hiệu: Nhật Bản</p>
-                <p>Nước sản xuất: Nhật Bản</p>
-                <p>Thành phần: dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo</p>
-                <p>Mô tả ngắn: Sữa rửa mặt Hatomugi ngừa mụn, dưỡng ẩm và làm sáng da Reihaku Hatomugi Acne Care & Facial Washing 130g chứa các thành phần dưỡng ẩm tự nhiên chiết xuất từ hạt Ý dĩ, lá đào và rễ cam thảo giúp loại bỏ bụi bẩn, dầu thừa ẩn sâu trong lỗ chân lông, hỗ trợ ngăn ngừa và làm giảm mụn trứng cá, đồng thời bổ sung độ ẩm, cải thiện tình trạng da khô thô ráp. </p>
+                <h2>Kem đánh răng Sensodyne Repair And Protect Deep Repair Whitening giảm ê buốt răng, cơ chế phục hồi sâu (100g)</h2>
+                <p>Giá: <span class="product-price">90.000đ / Tuýp</span></p>
+                <p>Danh mục: Kem đánh răng</p>
+                <p>Quy cách: Tuýp x 100g</p>
+                <p>Xuất xứ thương hiệu: Hoa Kỳ</p>
+                <p>Nhà sản xuất: Neocosmed Co., Ltd</p>
+                <p>Nước sản xuất: Thái Lan</p>
+                <p>Thành phần: Glycerin, PEG-8, Hydrated Silica, Calcium Sodium Phosphosilicate, Cocamidopropyl Betaine, Sodium Methyl Cocoyl Taurate, Titanium Dioxide, Aroma, Carbomer, Silica, Sodium Fluoride, Sodium Saccharin, Limonene.</p>
+                <p>Mô tả ngắn: Kem đánh răng Sensodyne Repair & Protect Deep Repair Whitening giúp phục hồi răng nhạy cảm, mang đến hơi thở thơm mát với công nghệ NOVAMIN độc đáo. Ngoài ra, sản phẩm hỗ trợ và làm giảm ê buốt răng do ngà răng bị lộ bằng cách hình thành lớp bao phủ bên trên và bên trong ngà răng, có chứa flouride giúp làm chắc răng.</p>
+                <p>Đối tượng sử dụng: Người lớn và trẻ em từ 12 tuổi trở lên</p>
                 <button>Thêm vào giỏ hàng</button>
                 <a href="pay.html">
                     <button>Mua ngay</button>
@@ -66,9 +68,9 @@
                     <p class="product-price">408.000đ / Chai</p>
                 </div>
                 <div class="product-itemp">
-                    <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
-                    <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
-                    <p class="product-price">90.000đ / Tuýp</p>
+                    <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
+                    <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
+                    <p class="product-price">87.200đ / Tuýp</p>
                 </div>
                 <div class="product-itemp">
                     <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
@@ -80,6 +82,6 @@
         <footer>
             <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
         </footer>
-        </div>
+    </div>
 </body>
 </html>
