--- a/thi/sanpham13.html
+++ b/thi/sanpham13.html
@@ -10,49 +10,78 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
+        </div>
+        <div class="product-detail">
+            <img src="IMG/sanpham13.png" alt="Kem đánh răng">
+            <div class="product-info">
+                <h2>Kem đánh răng Sensodyne Repair And Protect Deep Repair Whitening giảm ê buốt răng, cơ chế phục hồi sâu (100g)</h2>
+                <p>Giá: <span class="product-price">90.000đ / Tuýp</span></p>
+                <p>Danh mục: Kem đánh răng</p>
+                <p>Quy cách: Tuýp x 100g</p>
+                <p>Xuất xứ thương hiệu: Hoa Kỳ</p>
+                <p>Nhà sản xuất: Neocosmed Co., Ltd</p>
+                <p>Nước sản xuất: Thái Lan</p>
+                <p>Thành phần: Glycerin, PEG-8, Hydrated Silica, Calcium Sodium Phosphosilicate, Cocamidopropyl Betaine, Sodium Methyl Cocoyl Taurate, Titanium Dioxide, Aroma, Carbomer, Silica, Sodium Fluoride, Sodium Saccharin, Limonene.</p>
+                <p>Mô tả ngắn: Kem đánh răng Sensodyne Repair & Protect Deep Repair Whitening giúp phục hồi răng nhạy cảm, mang đến hơi thở thơm mát với công nghệ NOVAMIN độc đáo. Ngoài ra, sản phẩm hỗ trợ và làm giảm ê buốt răng do ngà răng bị lộ bằng cách hình thành lớp bao phủ bên trên và bên trong ngà răng, có chứa flouride giúp làm chắc răng.</p>
+                <p>Đối tượng sử dụng: Người lớn và trẻ em từ 12 tuổi trở lên</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
+        </div>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
+                    <p class="product-name">Chai xịt Zuchi Family</p>
+                    <p class="product-price">29.000đ / Chai</p>
                 </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
+                <div class="product-itemp">
+                    <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
+                    <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
+                    <p class="product-price">1.210.000đ / Hộp</p>
                 </div>
-            </nav>
+                <div class="product-itemp">
+                    <a href="sanpham16.html"><img src="IMG/sanpham16.png" alt="Product 14"></a>
+                    <p class="product-name">Sữa bột CaloSure gold Vitadairy</p>
+                    <p class="product-price">408.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
+                    <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
+                    <p class="product-price">87.200đ / Tuýp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
+                    <p class="product-name">Nhiệt kế hồng ngoại Yuwell YT-1C</p>
+                    <p class="product-price">472.000đ / Hộp</p>
+                </div>
+            </div>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
     </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham13.png" alt="Kem đánh răng">
-        <div class="product-info">
-            <h2>Kem đánh răng Sensodyne Repair And Protect Deep Repair Whitening giảm ê buốt răng, cơ chế phục hồi sâu (100g)</h2>
-            <p>Giá: <span class="product-price">90.000đ / Tuýp</span></p>
-            <p>Danh mục: Kem đánh răng</p>
-            <p>Quy cách: Tuýp x 100g</p>
-            <p>Xuất xứ thương hiệu: Hoa Kỳ</p>
-            <p>Nhà sản xuất: Neocosmed Co., Ltd</p>
-            <p>Nước sản xuất: Thái Lan</p>
-            <p>Thành phần: Glycerin, PEG-8, Hydrated Silica, Calcium Sodium Phosphosilicate, Cocamidopropyl Betaine, Sodium Methyl Cocoyl Taurate, Titanium Dioxide, Aroma, Carbomer, Silica, Sodium Fluoride, Sodium Saccharin, Limonene.</p>
-            <p>Mô tả ngắn: Kem đánh răng Sensodyne Repair & Protect Deep Repair Whitening giúp phục hồi răng nhạy cảm, mang đến hơi thở thơm mát với công nghệ NOVAMIN độc đáo. Ngoài ra, sản phẩm hỗ trợ và làm giảm ê buốt răng do ngà răng bị lộ bằng cách hình thành lớp bao phủ bên trên và bên trong ngà răng, có chứa flouride giúp làm chắc răng.</p>
-            <p>Đối tượng sử dụng: Người lớn và trẻ em từ 12 tuổi trở lên</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
-        </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
-        </div>
 </body>
 </html>
