--- a/thi/sanpham15.html
+++ b/thi/sanpham15.html
@@ -10,49 +10,79 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham15.png" alt="Viên uống">
-        <div class="product-info">
-            <h2>Viên uống LéAna Ocavill hỗ trợ cân bằng nội tiết tố (60 viên)</h2>
-            <p>Giá: <span class="product-price">540.000đ / Hộp</span></p>
-            <p>Danh mục:  Cân bằng nội tiết tố</p>
-            <p>Dạng bào chế: Viên nang mềm</p>
-            <p>Quy cách: Hộp 60 Viên</p>
-            <p>Xuất xứ thương hiệu: Bulgaria</p>
-            <p>Nhà sản xuất: PHYTOPHARMA LTD</p>
-            <p>Nước sản xuất: Bulgaria</p>
-            <p>Thành phần: Tinh dầu hoa anh thảo, Vitamin E, Nhân Sâm, Lepidium meyenii, Trinh nữ</p>
-            <p>Mô tả ngắn: Léana Ocavill hỗ trợ cân bằng nội tiết tố. Hỗ trợ cải thiện các triệu chứng thời kỳ tiền mãn kinh, mãn kinh do suy giảm nội tiết tố. Hỗ trợ hạn chế quá trình lão hóa, giúp đẹp da.</p>
-            <p>Số đăng ký: 2085/2024/ĐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham15.png" alt="Viên uống">
+            <div class="product-info">
+                <h2>Viên uống LéAna Ocavill hỗ trợ cân bằng nội tiết tố (60 viên)</h2>
+                <p>Giá: <span class="product-price">540.000đ / Hộp</span></p>
+                <p>Danh mục:  Cân bằng nội tiết tố</p>
+                <p>Dạng bào chế: Viên nang mềm</p>
+                <p>Quy cách: Hộp 60 Viên</p>
+                <p>Xuất xứ thương hiệu: Bulgaria</p>
+                <p>Nhà sản xuất: PHYTOPHARMA LTD</p>
+                <p>Nước sản xuất: Bulgaria</p>
+                <p>Thành phần: Tinh dầu hoa anh thảo, Vitamin E, Nhân Sâm, Lepidium meyenii, Trinh nữ</p>
+                <p>Mô tả ngắn: Léana Ocavill hỗ trợ cân bằng nội tiết tố. Hỗ trợ cải thiện các triệu chứng thời kỳ tiền mãn kinh, mãn kinh do suy giảm nội tiết tố. Hỗ trợ hạn chế quá trình lão hóa, giúp đẹp da.</p>
+                <p>Số đăng ký: 2085/2024/ĐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
+                    <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
+                    <p class="product-price">295.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
+                    <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
+                    <p class="product-price">1.200.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
+                    <p class="product-name">Thực phẩm bảo vệ sức khỏe NMN PQQ</p>
+                    <p class="product-price">6.675.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
+                    <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
+                    <p class="product-price">575.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham17.html"><img src="IMG/sanpham17.png" alt="Product 14"></a>
+                    <p class="product-name">Cốm Lacto Biomin Gold</p>
+                    <p class="product-price">108.000đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
