--- a/thi/sanpham16.html
+++ b/thi/sanpham16.html
@@ -10,51 +10,80 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
+        </div>
+        <div class="product-detail">
+            <img src="IMG/sanpham16.png" alt="Sữa bột">
+            <div class="product-info">
+                <h2>Sữa bột CaloSure gold Vitadairy ít đường, tăng cường sức khỏe tim mạch, hồi phục sức khỏe (900g)</h2>
+                <p>Giá: <span class="product-price">408.000đ / Hộp</span></p>
+                <p>Danh mục: Sữa</p>
+                <p>Dạng bào chế: Dạng bột</p>
+                <p>Quy cách: Hộp</p>
+                <p>Xuất xứ thương hiệu: Việt Nam</p>
+                <p>Nhà sản xuất: VITADAIRY</p>
+                <p>Nước sản xuất: Việt Nam</p>
+                <p>Thành phần: Năng lượng, Protein, Chất béo, Omega 6, Omega 3, Carbohydrate, Palatinose, Chất Xơ, Glucosamine, CaHMB, GABA, Taurine, Vitamin B2, Vitamin B1, Lysine, Vitamin D3, Vitamin B6, Vitamin B12, Vitamin K1, Vitamin E, Vitamin A, Folic Acid, Vitamin C, Biotin, Phospho, Sắt, Đồng, Kali, Mangan, Kẽm, Magie, Canxi, Natri, Pantothenate, Selen</p>
+                <p>Mô tả ngắn: VitaDairy CaloSure Gold Ít Đường dùng thay thế bữa ăn phụ hoặc tăng cường dinh dưỡng cho cơ thể giúp cải thiện sức khoẻ, bảo vệ xương khớp, hỗ trợ tiêu hoá và tăng cường sức khoẻ tim mạch cho người cao tuổi.</p>
+                <p>Đối tượng: Người cao tuổi</p>
+                <p>Số đăng ký: 21/2021/ÐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
+        </div>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
+                    <p class="product-name">Chai xịt Zuchi Family</p>
+                    <p class="product-price">29.000đ / Chai</p>
                 </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
+                <div class="product-itemp">
+                    <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
+                    <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
+                    <p class="product-price">1.210.000đ / Hộp</p>
                 </div>
-            </nav>
+                <div class="product-itemp">
+                    <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
+                    <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
+                    <p class="product-price">90.000đ / Tuýp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
+                    <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
+                    <p class="product-price">87.200đ / Tuýp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham4.html"><img src="IMG/sanpham4.png" alt="Product 4"></a>
+                    <p class="product-name">Nhiệt kế hồng ngoại Yuwell YT-1C</p>
+                    <p class="product-price">472.000đ / Hộp</p>
+                </div>
+            </div>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham16.png" alt="Sữa bột">
-        <div class="product-info">
-            <h2>Sữa bột CaloSure gold Vitadairy ít đường, tăng cường sức khỏe tim mạch, hồi phục sức khỏe (900g)</h2>
-            <p>Giá: <span class="product-price">408.000đ / Hộp</span></p>
-            <p>Danh mục: Sữa</p>
-            <p>Dạng bào chế: Dạng bột</p>
-            <p>Quy cách: Hộp</p>
-            <p>Xuất xứ thương hiệu: Việt Nam</p>
-            <p>Nhà sản xuất: VITADAIRY</p>
-            <p>Nước sản xuất: Việt Nam</p>
-            <p>Thành phần: Năng lượng, Protein, Chất béo, Omega 6, Omega 3, Carbohydrate, Palatinose, Chất Xơ, Glucosamine, CaHMB, GABA, Taurine, Vitamin B2, Vitamin B1, Lysine, Vitamin D3, Vitamin B6, Vitamin B12, Vitamin K1, Vitamin E, Vitamin A, Folic Acid, Vitamin C, Biotin, Phospho, Sắt, Đồng, Kali, Mangan, Kẽm, Magie, Canxi, Natri, Pantothenate, Selen</p>
-            <p>Mô tả ngắn: VitaDairy CaloSure Gold Ít Đường dùng thay thế bữa ăn phụ hoặc tăng cường dinh dưỡng cho cơ thể giúp cải thiện sức khoẻ, bảo vệ xương khớp, hỗ trợ tiêu hoá và tăng cường sức khoẻ tim mạch cho người cao tuổi.</p>
-            <p>Đối tượng: Người cao tuổi</p>
-            <p>Số đăng ký: 21/2021/ÐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
-        </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
-        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
+        </div>  
 </body>
 </html>
